Bug 272045 - plasma refuses to start
Summary: plasma refuses to start
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-30 12:06 UTC by Alin M Elena
Modified: 2011-05-01 18:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-04-30 12:06:53 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.41 (4.7 >= 20110106) "release 1"
Qt Version: 4.7.2
Operating System: Linux 2.6.39-rc4-9-desktop x86_64
Distribution: "openSUSE 12.1 Milestone 0 (x86_64)"

-- Information about the crash:
trying to start with a clean plasma settings... plasma-desktop crashes
[alin@abbaton:~]: kquitapp plasma-desktop && old ~/.kde4/share/config/plasma* && plasma-desktop &
[1] 3206
[alin@abbaton:~]: unnamed app(3207): "Application plasma-desktop could not be found using service org.kde.plasma-desktop and path /MainApplication." 

[1]+  Exit 1                  kquitapp plasma-desktop && old ~/.kde4/share/config/plasma* && plasma-desktop

traces added.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma Desktop Shell (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f2e9ca7a760 (LWP 2674))]

Thread 3 (Thread 0x7f2e84062700 (LWP 2676)):
#0  0x00007f2e9b38438c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2e90808944 in ?? () from /usr/lib64/libQtScript.so.4
#2  0x00007f2e90808979 in ?? () from /usr/lib64/libQtScript.so.4
#3  0x00007f2e8db64853 in ?? () from /usr/lib64/libGL.so.1
#4  0x00007f2e9b37fa3f in start_thread () from /lib64/libpthread.so.0
#5  0x00007f2e9a13767d in clone () from /lib64/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f2e827c2700 (LWP 2677)):
#0  0x00007f2e9b3820b2 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007f2e96f5f638 in g_main_context_iteration (context=0xb20c00, may_block=1) at gmain.c:3153
#2  0x00007f2e9b724376 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#3  0x00007f2e9b6f8992 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#4  0x00007f2e9b6f8ba5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#5  0x00007f2e9b60d784 in QThread::exec() () from /usr/lib64/libQtCore.so.4
#6  0x00007f2e9b6da108 in ?? () from /usr/lib64/libQtCore.so.4
#7  0x00007f2e9b610075 in ?? () from /usr/lib64/libQtCore.so.4
#8  0x00007f2e8db64853 in ?? () from /usr/lib64/libGL.so.1
#9  0x00007f2e9b37fa3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007f2e9a13767d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f2e9ca7a760 (LWP 2674)):
[KCrash Handler]
#6  QString (other=) at /usr/include/QtCore/qstring.h:728
#7  KSycocaEntry::entryPath (this=0x0) at /usr/src/debug/kdelibs-4.6.41_20110429/kdecore/sycoca/ksycocaentry.cpp:107
#8  0x00007f2e7c55f41d in TaskManager::LauncherItem::setLauncherUrl (this=0xcccd30, url=<optimized out>) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/taskmanager/launcheritem.cpp:318
#9  0x00007f2e7c55fb3d in TaskManager::LauncherItem::LauncherItem (this=0xcccd30, parent=<optimized out>, url=...) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/taskmanager/launcheritem.cpp:74
#10 0x00007f2e7c55b461 in TaskManager::GroupManager::addLauncher (this=0xab37b0, url=..., icon=..., name=..., genericName=...) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/taskmanager/groupmanager.cpp:590
#11 0x00007f2e7c55bd61 in TaskManager::GroupManager::readLauncherConfig (this=0xab37b0, cg=<optimized out>) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/taskmanager/groupmanager.cpp:701
#12 0x00007f2e7c31b087 in Tasks::configChanged (this=0xabfab0) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/applets/tasks/tasks.cpp:216
#13 0x00007f2e898ad7b7 in WorkspaceScripting::Applet::reloadConfig (this=0xf00e50) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/plasmagenericshell/scripting/applet.cpp:202
#14 0x00007f2e898bbd37 in WorkspaceScripting::Widget::~Widget (this=0xf00e50, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/plasmagenericshell/scripting/widget.cpp:53
#15 0x00007f2e898bbd89 in WorkspaceScripting::Widget::~Widget (this=0xf00e50, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.6.41_20110428/libs/plasmagenericshell/scripting/widget.cpp:55
#16 0x00007f2e90877a2e in ?? () from /usr/lib64/libQtScript.so.4
#17 0x00007f2e90877a99 in ?? () from /usr/lib64/libQtScript.so.4
#18 0x00007f2e9087327b in ?? () from /usr/lib64/libQtScript.so.4
#19 0x00007f2e90782faa in ?? () from /usr/lib64/libQtScript.so.4
#20 0x00007f2e907831ba in ?? () from /usr/lib64/libQtScript.so.4
#21 0x00007f2e90857257 in ?? () from /usr/lib64/libQtScript.so.4
#22 0x00007f2e90857719 in ?? () from /usr/lib64/libQtScript.so.4
#23 0x00007f2e9b7108c3 in QObject::~QObject() () from /usr/lib64/libQtCore.so.4
#24 0x00007f2e8a1a9f0c in ~DesktopScriptEngine (this=0x7fff13cfb190, __in_chrg=<optimized out>) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/shell/scripting/desktopscriptengine.h:29
#25 DesktopCorona::evaluateScripts (this=0x8bbad0, scripts=<optimized out>) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/shell/desktopcorona.cpp:362
#26 0x00007f2e8a1aa0e6 in DesktopCorona::loadDefaultLayout (this=0x8bbad0) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/shell/desktopcorona.cpp:388
#27 0x00007f2e923d7ebc in Plasma::Corona::initializeLayout (this=0x8bbad0, configName=...) at /usr/src/debug/kdelibs-4.6.41_20110429/plasma/corona.cpp:184
#28 0x00007f2e8a1ccd92 in PlasmaApp::corona (this=0x758a10) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/shell/plasmaapp.cpp:804
#29 0x00007f2e8a1cd07c in PlasmaApp::setupDesktop (this=0x758a10) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/shell/plasmaapp.cpp:306
#30 0x00007f2e8a1ce8ae in PlasmaApp::qt_metacall (this=0x758a10, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7f2e80) at /usr/src/debug/kde-workspace-4.6.41_20110428/build/plasma/desktop/shell/plasmaapp.moc:139
#31 0x00007f2e9b70d46a in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#32 0x00007f2e9a8a67d6 in QApplication::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#33 0x00007f2e9a8a4124 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#34 0x00007f2e9a8ac6ca in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#35 0x00007f2e9c47aa16 in KApplication::notify (this=0x758a10, receiver=0x758a10, event=0x894440) at /usr/src/debug/kdelibs-4.6.41_20110429/kdeui/kernel/kapplication.cpp:311
#36 0x00007f2e9b6f955c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#37 0x00007f2e9b6fcd55 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQtCore.so.4
#38 0x00007f2e9b724183 in ?? () from /usr/lib64/libQtCore.so.4
#39 0x00007f2e96f5ebd3 in g_main_dispatch (context=0x7694e0) at gmain.c:2440
#40 g_main_context_dispatch (context=0x7694e0) at gmain.c:3013
#41 0x00007f2e96f5f3b0 in g_main_context_iterate (context=0x7694e0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3091
#42 0x00007f2e96f5f650 in g_main_context_iteration (context=0x7694e0, may_block=1) at gmain.c:3154
#43 0x00007f2e9b72431f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#44 0x00007f2e9a949b7e in ?? () from /usr/lib64/libQtGui.so.4
#45 0x00007f2e9b6f8992 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#46 0x00007f2e9b6f8ba5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#47 0x00007f2e9b6fd00b in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#48 0x00007f2e8a1b39cd in kdemain (argc=1, argv=0x631e50) at /usr/src/debug/kde-workspace-4.6.41_20110428/plasma/desktop/shell/main.cpp:120
#49 0x0000000000407279 in _start ()

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-05-01 18:02:42 UTC
Git commit 4f7c12e26afc2c87f12e991f791b037212d69a74 by Aaron Seigo.
Committed on 30/04/2011 at 18:45.
Pushed by aseigo into branch 'master'.

check value of returned service pointer, allow checking launchers for validity

BUG:272045

M  +5    -0    libs/taskmanager/groupmanager.cpp     
M  +31   -18   libs/taskmanager/launcheritem.cpp     
M  +1    -0    libs/taskmanager/launcheritem.h     

http://commits.kde.org/kde-workspace/4f7c12e26afc2c87f12e991f791b037212d69a74