check value of returned service pointer, allow checking launchers for validity

BUG:272045